--- a/Midterm.css
+++ b/Midterm.css
@@ -1,78 +1,285 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  	 <meta charset="utf-8">
-  	 <title>Portfolio</title>
-  	 <link rel="stylesheet" type="text/css" href="Midterm.css"/>
-  	 <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-     <div id="mobile_menu_wrapper">
-       <div id="line">
-          <span style="width:3em; height:3.5em; float:right; padding-left:.5em; padding-top:.5em;">
-            <a onclick="toggle_visibility('mobile_menu');">
-              <img src="threelinesmenu.png"></img>
-            </a>
-          </span>
-      </div>
-    </div>
-      <div id="mobile_logo">
-          <a class="logo" href="Midterm.html">
-            <img src="logo.png">
-          </a>
-      </div>
-<div id="mobile_menu" style="display:block;">
-  <nav>
-    <ul>
-      <li>
-        <a herf="Midterm.html">HOME</a>
-      </li>
-    </ul>
-    </nav>
-  </div>
+html {
+	font-family: 'Ubuntu', sans-serif;
+	src:local("Ubuntu, sans-serif"); url(https://www.google.com/fonts#QuickUsePlace:quickUse/Family:Ubuntu)
+	font-size: 100%;
+	line-height: 2;
+	background-image: none;
+	background-image: url(http://podcollective.com/assets/phong/world.patterns/egypt-V1/EGYPT-C-PATTERN.png)
+}
+*, *:before, *:after{
+	box-sizing: border-box;
+}
+*, *:before, *:after{
+	box-sizing: border-box;
+}
 
-<div id="wrapper">
-    	 <div id="container">
-    	 		<div id="logo">
-             <a href"Midterm.html">
-    	 		      <img src="logo.png"></img>
-             </a>
-    	 	  </div>
-          <div id="header-menu">
-  			       	  <a href="home">HOME</a>
-  			       	  <a href="portfolio">PORTFOLIO</a>
-  			       	  <a href="services">SERVICES</a>
-  			 </div>
-         	    <div id="text">
-               		 <h1>ROBERTO CABRERA</h1>
-                      <p class="tagline">
-                      Graphic Artist • Web Designer</p>
-               </div> 
-      </div>
-          <div class="container1">
-                <div class="portfolio">  
-                 <div class="block img-right">              
-                    <div class="col 1of2">
-                        <h2>
-                          IL NASO WINE STORE AND BRANDING PACKAGING<br>
-                          <p>Il NASO is an educational wine concept that teaches and guides you throughout your wine shopping experi- ence. We have weekly wine tastings, where you will learn the basics of how to recognize key characteristics, like if a bottle is corked. Additionally, in store we have food and wine pairing guides and a private room devot- ed to a diversity of wine-related classes, spirits tutorials, and wine and food events.</p>
-                          <p>For this company I have to fashion their main logo and everything that is incorporated with their marketing and branding strategy, including their stationary design and the vision of their events and showcases. Also, for the events I am responsible for designing a wine box to place various wine bottles inside to be given out as gifts.
-                          </p>
-                        </h2>
-                      </div>
-                        <div class="col size1of2">
-                          <img src="ilnaso.png"></img>
-                        </div>
-                    </div>
-                </div>
-              </div>
-          <div id="container3">
-               <div class="footer">
-                    646.305.167*</br>
-                    Roberto Cabrera</br>
-                    Graphic and Web Designer<br>
-                    Copy Wright 2014
-              </div>
-          </div>
-    </div>
-  </body>
+#mobile_menu_wrapper{
+	visibility: visible;
+}
+#mobile_menu_wrapper{
+	visibility: hidden;
+}
+#mobile_menu_wrapper{
+ 	background: none repeat scroll 0 0 rgba(225,225,224, 0.80);
+    border-bottom: 1px solid #006A5F;
+    clear: both;
+    height: 4em;
+    position: fixed;
+    top: 0;
+    visibility: visible;
+    width: 100%;
+    z-index: 1;
+}
+#mobile_logo {
+	display: block;
+	height: 40px;
+	margin: 12px 0 12px 20px;
+	max-width: 65px 
+}
+
+a:link {
+	text-decoration: none;
+}
+a.toggle_visibility{
+	color: inherit;
+}
+#mobile_logo img {
+	height: auto;
+	max-width: 65px;
+	width: 100%
+}
+body img{
+	visibility: visible;
+	height: auto;
+	max-width: 100%;
+}
+a img {
+	border: medium none;
+}
+element.style {
+	display: block;
+}
+#mobile_menu {
+    background: none repeat scroll 0 0 rgba(225,225,224, 0.80);
+    height: 11em;
+    margin-right:12px 0px 12px 10px;
+    padding: 10px;
+    position: absolute;
+    right: 0;
+    top: 4em;
+    width: 10em;
+}
+element.style {
+	float: right;
+    height: 3.5em;
+    padding-left: 0.5em;
+    padding-top: 0.5em;
+    width: 3em;
+}
+a.logo {
+	color: inherit;
+	text-decoration: none;
+}
+body img{
+	color: rgba(255, 255, 204);
+	height: auto;
+	max-width: 100%;
+}
+a img { 
+ 	border:medium none;
+}
+
+
+nav ul, nav:active ul {
+	color: #006A5F;
+	position: relative;
+	width: 100%;
+}
+ul {
+	list-style: none outside none;
+	margin: 0;
+	padding:0;
+}
+nav li {
+    border-right: medium none;
+    font-weight: 700;
+    margin: 0;
+    padding: 10px 0;
+    text-align: left;
+    width: 100%;
+}
+ul li {
+    color: #006A5F;
+    float: left;
+    padding: 2.5em 1.7em;
+}
+a:link {
+    text-decoration: none;
+}
+ul li a {
+    color: #;
+    text-decoration: none;
+}
+a {
+    color: inherit;
+    text-decoration: none;
+}
+#wrapper{
+	background: none repeat scroll 0% 0% rgba(225, 225, 204, 0.30);
+	margin: 62px 0px 250px;
+	overflow: hidden;
+	padding: 0px;
+	position: relative;
+	z-index: 3;
+}
+
+#container{
+	background-color: rgba(255, 255, 204, 0.80);
+	margin: 10% auto;
+	max-width: 100%;
+	display: block;
+	font-size: 1em;
+	padding: 0 50px;
+	text-align: center;
+}
+#wrapper .container1{
+	padding: 0px 40px;
+	background: none repeat scroll 0% 0% rgba(255, 255, 204, 0.30);
+}
+#container3 {
+	background-color: #579009;
+	text-align: center;
+	}
+
+#logo{
+	width: 75px;
+	height: 45px;
+	padding-top: 60px;
+	padding-left: 20px;
+	float: left;
+}
+#logo img{
+	max-width: 150%;
+	height: auto;
+
+}
+
+#header-menu{
+	background: none repeat scroll 0% 0%;
+	position: relative;
+	display: block;
+	font-size: 1.5em;
+	padding: 0px 30px;
+	margin: 0px 20px;
+	line-height: 77px;
+	height: 75px;
+	letter-spacing: 0.125em;
+	
+
+}
+a:hover {
+	display: inline-block;
+	text-decoration: none;
+	color: #000066;
+	padding: 5px 15px;
+	margin: 0px 10px;
+	border-width: 0.75px;
+	border-style: solid;
+	border-color: #000066;
+	-moz-border-top-colors: none;
+	-moz-border-right-colors: none;
+	-moz-border-bottom-colors: none;
+	-moz-border-left-colors: none;
+	letter-spacing: 3px;
+	border-image: linear-gradient(to right, #000066 30%, transparent 30%, transparent 70%, #000066 85%) 1 1 1 1;
+	transition: all 0.3s ease 0s;
+}
+
+#text{
+	font-size: 50px;
+	color: #006A5F;
+	margin-bottom: 10px;
+}
+#text span{
+	font-weight: 700;
+}
+#text {
+    animation: 3s ease 0s normal none 1 cssAnimation;
+}
+@keyframes cssAnimation {
+0% {
+    transform: rotate(0deg) scale(0.1) skew(1deg) translate(0px);
+}
+100% {
+    transform: rotate(0deg) scale(1.009) skew(0deg) translate(0px);
+}
+@-webkit-keyframes cssAnimation{
+	0% {
+    transform: rotate(0deg) scale(0.1) skew(1deg) translate(0px);
+}
+100% {
+    transform: rotate(0deg) scale(1.009) skew(0deg) translate(0px);
+  }
+}
+p.tagline{
+	color: #007338;
+	font-size: 62px
+	line-height: 1em;
+	text-align: center;
+}
+#wrapper.block.img-right .col{
+}
+#wrapper .col {
+    padding-bottom: 4%;
+}
+#wrapper .1of2 {
+    width: 50%;
+}
+#wrapper .col {
+    float: left;
+    padding: 2%;
+}
+
+
+#wrapper.block.img-right .col:first-child{
+	padding: 80px 40px 40px;
+	
+ }
+
+
+ #portfolio .1of2 {
+ 	width: 50%;
+ 	float: left;
+ 	padding: 2%;
+ }
+
+ h2{
+	
+}
+.block.img-right .col img {
+    right: -60px;
+}
+#wrapper .block img {
+    display: block;
+    width: 100%;
+    position: relative;
+    float: right;
+}
+#wrapper .block img {
+    transition: all 0.4s ease 0s;
+}
+img {
+    border: medium none;
+}
+img {
+    border: 0px none;
+}
+* {
+    box-sizing: border-box;
+    outline: 0px none;
+}
+div.footer {
+	background-color: rgba(215, 209, 190, 1);
+	padding: 90px 0 90px;
+	text-align: right;
+}
